--- a/index.html
+++ b/index.html
@@ -17,10 +17,19 @@
     <script src="js/script.js" defer></script>
 </head>
 <body>
-    <div class="container">
-        <div class="grid">
-
+    <header>
+        <div>
+            <img src="img/boolean-logo.png" class="logo">
         </div>
-    </div>
+        <div></div>
+    </header>
+    <main>
+        <div class="container">
+            <div class="grid">
+    
+            </div>
+        </div>
+    </main>
+    <footer></footer>
 </body>
 </html>
