--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <!-- css -->
     <link rel="stylesheet" href="css/style.css">
 
+    <!-- fontawesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
+
     <!-- bootstrap -->
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous" defer></script> -->
@@ -21,7 +24,9 @@
         <div>
             <img src="img/boolean-logo.png" class="logo">
         </div>
-        <div></div>
+        <div>
+            <a href="#!" class="play-btn">Play</a>
+        </div>
     </header>
     <main>
         <div class="container">
@@ -30,6 +35,10 @@
             </div>
         </div>
     </main>
-    <footer></footer>
+    <footer>
+        <div>
+            <h5>Made with <i class="fa-solid fa-heart"></i> by <a href="#!" class="boolean">Boolean</span></h5>
+        </div>
+    </footer>
 </body>
 </html>
